# digest

./: .gitignore  README.md
backend/: pyproject.toml  requirements-all.txt  requirements-dev.txt  requirements.txt
frontend/: package-lock.json  package.json
